--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vuetify": "^2.6.5"
   },
   "devDependencies": {
+    "@mycure/vue-wysiwyg": "^1.3.0",
     "@vue/cli-plugin-babel": "^4.0.5",
     "@vue/cli-plugin-eslint": "^4.0.5",
     "@vue/cli-plugin-router": "^5.0.4",
